--- a/TorF/res/values/strings.xml
+++ b/TorF/res/values/strings.xml
@@ -15,5 +15,6 @@
     <string name="home">HOME</string>
     <string name="sign_in_why">Sign in with Google to share your scores and achievements with your friends.</string>
     <string name="your_progress_will_be_uploaded">Your existing achievements and score will be uploaded shortly.</string>
+    <string name="signin_other_error">There was an issue with sign in.  Please try again later.</string>
 
 </resources>
