--- a/TorF/res/values/strings.xml
+++ b/TorF/res/values/strings.xml
@@ -16,5 +16,7 @@
     <string name="sign_in_why">Sign in with Google to share your scores and achievements with your friends.</string>
     <string name="your_progress_will_be_uploaded">Your existing achievements and score will be uploaded shortly.</string>
     <string name="signin_other_error">There was an issue with sign in.  Please try again later.</string>
+    <string name="achievements_not_available">Please sign in to view achievements.</string>
+    <string name="leaderboards_not_available">Please sign in to view leaderboards.</string>
 
 </resources>
